--- a/src/styles.css
+++ b/src/styles.css
@@ -5,8 +5,43 @@
 }
 
 body {
-  font-size: 16px;
+  font-size: 18px;
 }
+
+.container {
+  width: 500px;
+}
+
+.field {
+  border: solid 1px black;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 4px 0;
+  min-height: 40px;
+}
+
+.tagInput {
+  border: none;
+  margin-left: 8px;
+  outline: none;
+  line-height: 20px;
+}
+
+/* .container > div {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
+}
+
+.methods {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100px;
+  margin-left: 20px;
+}
+
+*/
 
 .list {
   list-style: none;
@@ -20,6 +55,7 @@ body {
   display: inline-block;
   margin-left: 8px;
   cursor: pointer;
+  margin-bottom: 6px;
 }
 
 .destroy {
