--- a/src/styles.css
+++ b/src/styles.css
@@ -39,10 +39,12 @@ body {
   border-color: rgb(118, 118, 118);
   padding: 2px;
   cursor: default;
+  cursor: pointer;
 }
 
 .methods > button {
   font-size: 16px;
+  cursor: pointer;
 }
 
 .list {
